--- a/web/index.html
+++ b/web/index.html
@@ -40,6 +40,73 @@
   <script src="flutter.js" defer></script>
 </head>
 <body>
+  
+  <style>
+    body {
+      background-color: #ffffff;
+    }
+  </style>
+
+
+
+
+  <!-- Loading indicator -->
+  <div id="loading">
+    <style>
+      body {
+        inset: 0;
+        overflow: hidden;
+        margin: 0;
+        padding: 0;
+        position: fixed;
+      }
+
+      #loading {
+        align-items: center;
+        display: flex;
+        height: 100%;
+        justify-content: center;
+        width: 100%;
+      }
+
+      #loading img {
+        animation: 1s ease-in-out 0s infinite alternate breathe;
+        opacity: 1;
+        transition: opacity .4s;
+      }
+
+      #loading.main_done img {
+        opacity: 1;
+      }
+
+      #loading.init_done img {
+        animation: .33s ease-in-out 0s 1 forwards zooooom;
+        opacity: .05;
+      }
+
+      @keyframes breathe {
+        from {
+          transform: scale(0.9)
+        }
+
+        to {
+          transform: scale(0.8)
+        }
+      }
+
+      @keyframes zooooom {
+        from {
+          transform: scale(1)
+        }
+
+        to {
+          transform: scale(10)
+        }
+      }
+    </style>
+    <img src="assets/assets/dhali-logo-clean.svg" alt="Loading indicator..." />
+  </div>
+
   <script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
