--- a/web/index.html
+++ b/web/index.html
@@ -47,7 +47,15 @@
     }
   </style>
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z5J90FJ19J"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
+    gtag('config', 'G-Z5J90FJ19J');
+  </script>
 
 
   <!-- Loading indicator -->
