--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             <!-- ***** Menu Start ***** -->
             <ul class="nav">
               <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
+              <li class="scroll-to-section"><a href="docs">Docs</a></li>
               <li class="scroll-to-section"><a href="#contact">Contact</a></li>
             </ul>
             <a class='menu-trigger'>
