--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             <ul class="nav">
               <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
               <li class="scroll-to-section"><a href="docs">Docs</a></li>
+              <li class="scroll-to-section"><a href="https://dhali-app.web.app/#/">Marketplace</a></li>
               <li class="scroll-to-section"><a href="#contact">Contact</a></li>
             </ul>
             <a class='menu-trigger'>
@@ -157,6 +158,57 @@
       </div>
     </div>
   </div>
+
+  <div id="portfolio" class="our-portfolio section">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-5">
+          <div class="section-heading wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.3s">
+            <!-- <h6>Powered by Dhali</h6> -->
+            <h4>Projects powered by <em>Dhali</em></h4>
+            <div class="line-dec"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container-fluid wow fadeIn" data-wow-duration="1s" data-wow-delay="0.7s">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="loop owl-carousel">
+            <div class="item">
+              <a href="https://dhali-text-to-speech.web.app/#/">
+                <div class="portfolio-item">
+                <div class="thumb">
+                  <img src="assets/images/portfolio-01.jpg" alt="">
+                </div>
+                <div class="down-content">
+                  <h4>Provide a voice over</h4>
+                  <span>Text to speech</span>
+                </div>
+              </div>
+              </a>  
+            </div>
+            <div class="item">
+              <a href="https://dhali-document-qa.web.app/#/">
+                <div class="portfolio-item">
+                <div class="thumb">
+                  <img src="assets/images/portfolio-01.jpg" alt="">
+                </div>
+                <div class="down-content">
+                  <h4>Get the answers you need</h4>
+                  <span>Document QA</span>
+                </div>
+              </div>
+              </a>  
+            </div>
+            <div class="item">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <footer>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <div class="container">
