--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             <ul class="nav">
               <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
               <li class="scroll-to-section"><a href="docs">Docs</a></li>
+              <li class="scroll-to-section"><a href="blog">Blog</a></li>
               <li class="scroll-to-section"><a href="https://dhali-app.web.app/#/">Marketplace</a></li>
               <li class="scroll-to-section"><a href="#contact">Contact</a></li>
             </ul>
