--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                   <img src="assets/images/portfolio-01.jpg" alt="">
                 </div>
                 <div class="down-content">
-                  <h4>Provide a voice over</h4>
+                  <h4>Create a voice over</h4>
                   <span>Text to speech</span>
                 </div>
               </div>
@@ -193,11 +193,11 @@
               <a href="https://dhali-document-qa.web.app/#/">
                 <div class="portfolio-item">
                 <div class="thumb">
-                  <img src="assets/images/portfolio-01.jpg" alt="">
+                  <img src="assets/images/portfolio-02.jpg" alt="">
                 </div>
                 <div class="down-content">
-                  <h4>Get the answers you need</h4>
-                  <span>Document QA</span>
+                  <h4>Ask your invoice</h4>
+                  <span>Document Q and A</span>
                 </div>
               </div>
               </a>  
