Update carousel message

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                   <img src="assets/images/portfolio-01.jpg" alt="">
                 </div>
                 <div class="down-content">
-                  <h4>Create a voice over</h4>
+                  <h4>Voiceover creator</h4>
                   <span>Text to speech</span>
                 </div>
               </div>
@@ -196,7 +196,7 @@
                   <img src="assets/images/portfolio-02.jpg" alt="">
                 </div>
                 <div class="down-content">
-                  <h4>Ask your invoice</h4>
+                  <h4>Invoice analyzer</h4>
                   <span>Document Q and A</span>
                 </div>
               </div>
