--- a/index.html
+++ b/index.html
@@ -67,7 +67,11 @@
               <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
               <li class="scroll-to-section"><a href="docs">Docs</a></li>
               <li class="scroll-to-section"><a href="blog">Blog</a></li>
-              <li class="scroll-to-section"><a href="https://dhali-app.web.app/#/">Marketplace</a></li>
+              <li class="scroll-to-section"><a href="https://dhali-app.web.app/#/">
+                <span style="position: relative;">
+                <sup style="position: absolute; top: -5px; right: -30px; background-color: rgb(255, 255, 255); color: rgb(106, 69, 229); padding: 2px;">Preview</sup>
+                Marketplace
+              </span></a></li>
               <li class="scroll-to-section"><a href="#contact">Contact</a></li>
             </ul>
             <a class='menu-trigger'>
@@ -129,6 +133,87 @@
     }
     </style>
 
+
+
+
+  <div id="services" class="services section">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="section-heading  wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.5s">
+            <h6>Try our apps</h6>
+            <h4>Powered by <em>Dhali</em></h4>
+            <div class="line-dec"></div>
+          </div>
+        </div>
+        <div class="col-lg-12">
+          <div class="naccs">
+            <div class="grid">
+              <div class="row">
+                <div class="col-lg-12">
+                  <div class="menu">
+                    <div class="first-thumb active">
+                      <div class="thumb">
+                        <span class="icon"><img src="assets/images/service-icon-02.png" alt=""></span>
+                        EchoText
+                      </div>
+                    </div>
+                    <div>
+                      <div class="thumb">                 
+                        <span class="icon"><img src="assets/images/service-icon-01.png" alt=""></span>
+                        AuditBot
+                      </div>
+                    </div>
+                  </div>
+                </div> 
+                <div class="col-lg-12">
+                  <ul class="nacc">
+                    <li class="active">
+                      <div>
+                        <div class="thumb">
+                          <div class="row">
+                            <div class="col-lg-6 align-self-center">
+                              <div class="left-text">
+                                <h4>Convert your text into speech</h4>
+                                <p>Easily generate voiceovers with a range of natural sounding synthetic voices. Perfect for overlaying on your media files.</p>
+                                <div class="ticks-list"><span><i class="fa fa-check"></i> Cost effective</span> <span><i class="fa fa-check"></i> Multiple voices</span> <span><i class="fa fa-check"></i> Export to .wav</span>
+                                  <span><i class="fa fa-check"></i> Natural sounding speech</span> <span><i class="fa fa-check"></i> Subscription-free</span></div>
+                                <a href="https://dhali-text-to-speech.web.app/#/" class="btn btn-primary">Try it now</a>
+                                <p></p>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </li>
+                    <li>
+                      <div>
+                        <div class="thumb">
+                          <div class="row">
+                            <div class="col-lg-6 align-self-center">
+                              <div class="left-text">
+                                <h4>Analyse your invoices</h4>
+                                <p>Cut administration time and streamline your receipt and invoice workflows!  Use natural language text prompts to automatically extract key information from your invoices.</p>
+                                <div class="ticks-list"><span><i class="fa fa-check"></i> Cost effective</span> <span><i class="fa fa-check"></i> Natural language prompts</span> <span><i class="fa fa-check"></i> Insights with confidence scores</span>
+                                  <span><i class="fa fa-check"></i> Subscription-free</span></div>
+                                <a href="https://dhali-text-to-speech.web.app/#/" class="btn btn-primary">Try it now</a>
+                                <p></p>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </li>
+                  </ul>
+                </div>          
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div id="contact" class="contact-us section">
     <div class="container">
       <div class="row">
@@ -155,56 +240,6 @@
               </div>
             </div>
           </form>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div id="portfolio" class="our-portfolio section">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-5">
-          <div class="section-heading wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.3s">
-            <!-- <h6>Powered by Dhali</h6> -->
-            <h4>Projects powered by <em>Dhali</em></h4>
-            <div class="line-dec"></div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="container-fluid wow fadeIn" data-wow-duration="1s" data-wow-delay="0.7s">
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="loop owl-carousel">
-            <div class="item">
-              <a href="https://dhali-text-to-speech.web.app/#/">
-                <div class="portfolio-item">
-                <div class="thumb">
-                  <img src="assets/images/portfolio-01.jpg" alt="">
-                </div>
-                <div class="down-content">
-                  <h4>Voiceover creator</h4>
-                  <span>Text to speech</span>
-                </div>
-              </div>
-              </a>  
-            </div>
-            <div class="item">
-              <a href="https://dhali-document-qa.web.app/#/">
-                <div class="portfolio-item">
-                <div class="thumb">
-                  <img src="assets/images/portfolio-02.jpg" alt="">
-                </div>
-                <div class="down-content">
-                  <h4>Invoice analyzer</h4>
-                  <span>Document Q and A</span>
-                </div>
-              </div>
-              </a>  
-            </div>
-            <div class="item">
-            </div>
-          </div>
         </div>
       </div>
     </div>
