Fix: AuditBot link

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                                 <p>Cut administration time and streamline your receipt and invoice workflows!  Use natural language text prompts to automatically extract key information from your invoices.</p>
                                 <div class="ticks-list"><span><i class="fa fa-check"></i> Cost effective</span> <span><i class="fa fa-check"></i> Natural language prompts</span> <span><i class="fa fa-check"></i> Insights with confidence scores</span>
                                   <span><i class="fa fa-check"></i> Subscription-free</span></div>
-                                <a href="https://dhali-text-to-speech.web.app/#/" class="btn btn-primary">Try it now</a>
+                                <a href="https://dhali-document-qa.web.app/#/" class="btn btn-primary">Try it now</a>
                                 <p></p>
                               </div>
                             </div>
