--- a/index.html
+++ b/index.html
@@ -175,7 +175,8 @@
                             <div class="col-lg-6 align-self-center">
                               <div class="left-text">
                                 <h4>Convert your text into speech</h4>
-                                <p>Easily generate voiceovers with a range of natural sounding synthetic voices. Perfect for overlaying on your media files.</p>
+                                <p>EchoText streamlines the creation of voiceovers, providing a selection of natural-sounding synthetic voices.</p>  
+                                <p>Subscription-free, it provides a straightforward workflow for you to quickly and cost-effectively generate high quality spoken content. No sign up or commitments necessary. Just save money and only pay for what you use, when you use it!</p>
                                 <div class="ticks-list"><span><i class="fa fa-check"></i> Cost effective</span> <span><i class="fa fa-check"></i> Multiple voices</span> <span><i class="fa fa-check"></i> Export to .wav</span>
                                   <span><i class="fa fa-check"></i> Natural sounding speech</span> <span><i class="fa fa-check"></i> Subscription-free</span></div>
                                 <a href="https://dhali-text-to-speech.web.app/#/" class="btn btn-primary">Try it now</a>
@@ -193,7 +194,9 @@
                             <div class="col-lg-6 align-self-center">
                               <div class="left-text">
                                 <h4>Analyse your invoices</h4>
-                                <p>Cut administration time and streamline your receipt and invoice workflows!  Use natural language text prompts to automatically extract key information from your invoices.</p>
+                                <p>AuditBot can cut administration time and streamline your receipt and invoice workflows.  Use natural language text prompts to automatically extract key information from your invoices and receipts.  Conveniently bulk export your extracted information to a csv file for easy data management and integration.</p>
+
+                                <p>Save money through our pay-as-you go model, only paying for what you use. Experience a new level of efficiency and convenience while handling your receipts and  invoices.</p>
                                 <div class="ticks-list"><span><i class="fa fa-check"></i> Cost effective</span> <span><i class="fa fa-check"></i> Natural language prompts</span> <span><i class="fa fa-check"></i> Insights with confidence scores</span>
                                   <span><i class="fa fa-check"></i> Subscription-free</span></div>
                                 <a href="https://dhali-document-qa.web.app/#/" class="btn btn-primary">Try it now</a>
