--- a/index.html
+++ b/index.html
@@ -133,36 +133,6 @@
     }
     </style>
 
-  <div id="contact" class="contact-us section">
-    <div class="container">
-      <div class="row">
-        <div id="snackbar-success">Thank you!</div>
-        <div id="snackbar-fail">Invalid email address</div>
-        <div class="col-lg-12 wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.25s">
-          <form id="contact" action="" method="post">
-            <div class="row">
-              <div class="col-lg-12">
-                <div class="fill-form">
-                  <div class="row">
-                    <div class="col-lg-12">
-                      <fieldset>
-                        <input type="text" name="email" id="email" pattern="[^ @]*@[^ @]*" placeholder="Your Email" required="">
-                      </fieldset>
-                    </div>
-                    <div class="col-lg-12">
-                      <fieldset>
-                        <button type="submit" id="form-submit" class="main-button ">Join our public beta waitlist!</button>
-                      </fieldset>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
 
 
   <div id="services" class="services section">
@@ -245,6 +215,44 @@
       </div>
     </div>
   </div>
+
+
+
+  <div id="free-quote" class="free-quote">
+    <div class="container">
+      <div id="contact" class="contact-us section">
+        <div class="container">
+          <div class="row">
+            <div id="snackbar-success">Thank you!</div>
+            <div id="snackbar-fail">Invalid email address</div>
+            <div class="col-lg-12 wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.25s">
+              <form id="contact" action="" method="post">
+                <div class="row">
+                  <div class="col-lg-12">
+                    <div class="fill-form">
+                      <div class="row">
+                        <div class="col-lg-12">
+                          <fieldset>
+                            <input type="text" name="email" id="email" pattern="[^ @]*@[^ @]*" placeholder="Your Email" required="">
+                          </fieldset>
+                        </div>
+                        <div class="col-lg-12">
+                          <fieldset>
+                            <button type="submit" id="form-submit" class="main-button ">Join our public beta waitlist!</button>
+                          </fieldset>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
 
   <footer>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
