add cookie notice

--- a/index.html
+++ b/index.html
@@ -2,15 +2,19 @@
 <html lang="en">
 
   <head>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6TPZFK7NQ6"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'G-6TPZFK7NQ6');
-    </script>
+    <script
+      type="text/javascript"
+      src="https://app.termly.io/embed.min.js"
+      data-auto-block="on"
+      data-website-uuid="1b1475d2-3c77-4545-b5fc-785d862fd817"
+    ></script>
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-KMZJNJH');</script>
+    <!-- End Google Tag Manager -->    
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -37,6 +41,10 @@
   </head>
 
 <body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KMZJNJH"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
 
   <!-- ***** Preloader Start ***** -->
   <div id="js-preloader" class="js-preloader">
@@ -263,16 +271,8 @@
             <a href="https://www.youtube.com/channel/UC8Mx_KbOQ4E7y50mSmlTx4w" class="fa fa-youtube" target="_blank"></a>
             <a href="https://github.com/Dhali-org" class="fa fa-github" target="_blank"></a>
             <a href="https://twitter.com/dhali_io" class="fa fa-twitter" target="_blank"></a>
+            <a href="#" onclick="window.displayPreferenceModal();return false;" id="termly-consent-preferences">Consent Preferences</a>
           </p>
-        </div>
-      </div>
-    </div>
-    <div id="cookie-notice">
-      <div style="display: flex; justify-content: space-between; align-items: center; width: 100%;">
-        <p style="color:rgb(255, 255, 255); margin: 0;">We use cookies to improve your browsing experience and to analyze website traffic. By continuing to use this website, you consent to our use of cookies. <a href="cookie-policy.htm" target="_blank" rel="noopener noreferrer" style="color:rgb(159, 159, 252);">Learn more</a></p>
-        <div>
-          <button id="reject-cookies" style="margin-right: 5px;">Reject</button>
-          <button id="accept-cookies">Accept</button>
         </div>
       </div>
     </div>
