--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
       data-website-uuid="1b1475d2-3c77-4545-b5fc-785d862fd817"
     ></script>
     <!-- Google Tag Manager -->
+    <!--
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-KMZJNJH');</script>
+    -->
     <!-- End Google Tag Manager -->    
-      <!-- Google Analytics -->
+    <!-- Google Analytics -->
+    <!--
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-6TPZFK7NQ6"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -23,6 +26,7 @@
       gtag('js', new Date());
       gtag('config', 'G-6TPZFK7NQ6');
     </script>
+    -->
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -304,7 +308,7 @@
       storageBucket: "dhali-prod.appspot.com",
       messagingSenderId: "1042340549063",
       appId: "1:1042340549063:web:3dc69cffe6d3c0746189e2",
-      measurementId: "G-6TPZFK7NQ6"
+      //measurementId: "G-6TPZFK7NQ6"
     };
     var app = firebase.initializeApp(firebaseConfig);
     var db = firebase.firestore(app)
@@ -316,10 +320,10 @@
       var mailformat = /^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$/;
       if (email.match(mailformat))
       {
-        gtag('event', 'button_click', {
-          'event_category': 'Button',
-          'event_label': 'Email submission success'
-        });
+        //gtag('event', 'button_click', {
+        //  'event_category': 'Button',
+        //  'event_label': 'Email submission success'
+        //});
 
         collection.doc().set(
           {
@@ -337,10 +341,10 @@
       }
       else
       {
-        gtag('event', 'button_click', {
-          'event_category': 'Button',
-          'event_label': 'Email submission failed'
-        });
+        //gtag('event', 'button_click', {
+        //  'event_category': 'Button',
+        //  'event_label': 'Email submission failed'
+        //});
 
         var x = document.getElementById("snackbar-fail");
 
@@ -352,25 +356,25 @@
       }
 
     })
-  window.addEventListener('scroll', function() {
-      clearTimeout(window.scrollTimer);
-      window.scrollTimer = setTimeout(function() {
-        gtag('event', 'scroll', {
-          'event_category': 'Page Interaction',
-          'event_label': 'Page Scrolled'
-        });
-      }, 100);
-    });
+    //window.addEventListener('scroll', function() {
+    //  clearTimeout(window.scrollTimer);
+    //  window.scrollTimer = setTimeout(function() {
+    //    gtag('event', 'scroll', {
+    //      'event_category': 'Page Interaction',
+    //      'event_label': 'Page Scrolled'
+    //    });
+    //  }, 100);
+    //});
 
-    window.addEventListener('beforeunload', function() {
-      const timeSpent = Math.round((new Date().getTime() - window.performance.timing.navigationStart) / 1000);
-      navigator.sendBeacon('https://www.google-analytics.com/mp/collect?measurement_id=G-6TPZFK7NQ6&api_secret=VJXWFQksSXWNKtPPyy31xw', JSON.stringify({
-        'event_name': 'page_time_spent',
-        'user_properties': {
-          'time_spent': timeSpent
-        }
-      }));
-    });
+    //window.addEventListener('beforeunload', function() {
+    //  const timeSpent = Math.round((new Date().getTime() - window.performance.timing.navigationStart) / 1000);
+    //  navigator.sendBeacon('https://www.google-analytics.com/mp/collect?measurement_id=G-6TPZFK7NQ6&api_secret=VJXWFQksSXWNKtPPyy31xw', JSON.stringify({
+    //    'event_name': 'page_time_spent',
+    //    'user_properties': {
+    //      'time_spent': timeSpent
+    //    }
+    //  }));
+    //});
   </script>
 
 </body>
