Update landing page main statement

--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
                 <div class="row">
                   <div class="col-lg-12">
                     <h6>Dhali</h6>
-                    <h2>The open marketplace for on-demand AI</h2>
-                    <p>Dhali levels the playing field by providing an open marketplace that offers cutting-edge AI solutions</p>
+                    <h2>Create, deploy, and monetise your AI</h2>
+                    <p>Join our Web3.0 subscription-free marketplace</p>
                   </div>
                   <div class="col-lg-12">
                     <div class="border-first-button scroll-to-section">
