tweak slogan, add explanation

--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
                 <div class="row">
                   <div class="col-lg-12">
                     <h6>Dhali</h6>
-                    <h2>Create, deploy, and monetise your AI</h2>
-                    <p>Join our Web3.0 subscription-free marketplace</p>
+                    <h2>Monetise your code in minutes.</h2>
+                    <p>Join our Web3.0 subscription-free API marketplace!</p>
                   </div>
                   <div class="col-lg-12">
                     <div class="border-first-button scroll-to-section">
@@ -135,7 +135,21 @@
   <footer>
   </footer>
 
-  <p style="page-break-after: always;">&nbsp;</p>
+  <!--<p style="page-break-after: always;">&nbsp;</p>-->
+
+  <div class="MuiBox-root css-0" style="display: flex; justify-content: center;">
+    <div class="MuiBox-root css-1miuba0">
+      <h4 class="MuiTypography-root MuiTypography-h4 MuiTypography-alignCenter MuiTypography-gutterBottom css-1wiq64f">
+        Create production-ready, NFT-backed APIs in a few clicks.
+      </h4>
+      <p class="MuiTypography-root MuiTypography-h6 MuiTypography-alignCenter css-1axaq4h">
+        Effortlessly create enterprise-grade web services, own them on the blockchain.  
+        Leave hosting, scaling, security and monetization to us.  
+        Take your projects into production in minutes, not months!
+      </p>
+    </div>
+  </div>
+
   
   <div id="about" class="about-us section">
     <div class="container">
