add marketplace link below beta signup

--- a/index.html
+++ b/index.html
@@ -247,8 +247,6 @@
     </div>
   </div>
 
-
-
   <div id="free-quote" class="free-quote">
     <div class="container">
       <div id="contact" class="contact-us section">
@@ -271,6 +269,9 @@
                           <fieldset>
                             <button type="submit" id="form-submit" class="main-button ">Join our public beta waitlist!</button>
                           </fieldset>
+                          <div>
+                            <p style="padding-top: 50px; font-size: 1.2em;">You can also preview our marketplace <a href="https://dhali-app.web.app/#/">here</a>!</p>
+                          </div>
                         </div>
                       </div>
                     </div>
@@ -283,7 +284,6 @@
       </div>
     </div>
   </div>
-
 
   <footer>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
