Modify value proposition statements

--- a/index.html
+++ b/index.html
@@ -117,20 +117,7 @@
   <footer>
   </footer>
 
-  <!--<p style="page-break-after: always;">&nbsp;</p>-->
-
-  <div class="MuiBox-root css-0" style="display: flex; justify-content: center;">
-    <div class="MuiBox-root css-1miuba0">
-      <h4 class="MuiTypography-root MuiTypography-h4 MuiTypography-alignCenter MuiTypography-gutterBottom css-1wiq64f">
-        Create production-ready, NFT-backed APIs in a few clicks.
-      </h4>
-      <p class="MuiTypography-root MuiTypography-h6 MuiTypography-alignCenter css-1axaq4h">
-        Effortlessly create enterprise-grade web services, own them on the blockchain.  
-        Leave hosting, scaling, security and monetization to us.  
-        Take your projects into production in minutes, not months!
-      </p>
-    </div>
-  </div>
+  <p style="page-break-after: always;">&nbsp;</p>
 
   
   <div id="about" class="about-us section">
@@ -140,6 +127,23 @@
           <div class="section-heading  wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.5s">
             <h4>What is <em>Dhali</em>?</h4>
           </div>
+          <p align="center">
+            Seamlessly create production-ready NFT-backed APIs.
+          </p>
+          <br>
+          <p align="center">
+            Effortlessly create and own enterprise-grade web services on the blockchain.
+          </p>
+          <br>
+          <p align="center">
+            Leave hosting, scaling, security and monetization to us.  
+          </p>
+          <br>
+          <p align="center">
+            Take your projects into production in minutes, not months!
+          </p>
+          <br>
+          <br>
         <p align="center">
           <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/QaC_-lBG9hc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>        </p>
       </div>
