--- a/index.html
+++ b/index.html
@@ -117,6 +117,49 @@
 
   <p style="page-break-after: always;">&nbsp;</p>
 
+  <div id="free-quote" class="free-quote">
+    <div class="container">
+      <div id="contact" class="contact-us section">
+        <div class="container">
+          <div class="row">
+            <div id="snackbar-success">Thank you!</div>
+            <div id="snackbar-fail">Invalid email address</div>
+            <div class="col-lg-12 wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.25s">
+              <form id="contact" action="" method="post">
+                <div class="row">
+                  <div class="col-lg-12">
+                    <div class="fill-form">
+                      <div class="row">
+                        <div class="col-lg-12">
+                          <fieldset>
+                            <input type="text" name="email" id="email" pattern="[^ @]*@[^ @]*" placeholder="Your Email"
+                              required="">
+                          </fieldset>
+                        </div>
+                        <div class="col-lg-12">
+                          <fieldset>
+                            <button type="submit" id="form-submit" class="main-button ">Join our public beta
+                              waitlist!</button>
+                          </fieldset>
+                          <div>
+                            <p style="padding-top: 50px; font-size: 1.2em;">You can also preview our marketplace <a
+                                href="https://dhali-app.web.app/#/">here</a>!</p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <p style="page-break-after: always;">&nbsp;</p>
 
   <div id="about" class="about-us section">
     <div class="container">
@@ -244,47 +287,6 @@
                     </ul>
                   </div>
                 </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div id="free-quote" class="free-quote">
-      <div class="container">
-        <div id="contact" class="contact-us section">
-          <div class="container">
-            <div class="row">
-              <div id="snackbar-success">Thank you!</div>
-              <div id="snackbar-fail">Invalid email address</div>
-              <div class="col-lg-12 wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.25s">
-                <form id="contact" action="" method="post">
-                  <div class="row">
-                    <div class="col-lg-12">
-                      <div class="fill-form">
-                        <div class="row">
-                          <div class="col-lg-12">
-                            <fieldset>
-                              <input type="text" name="email" id="email" pattern="[^ @]*@[^ @]*"
-                                placeholder="Your Email" required="">
-                            </fieldset>
-                          </div>
-                          <div class="col-lg-12">
-                            <fieldset>
-                              <button type="submit" id="form-submit" class="main-button ">Join our public beta
-                                waitlist!</button>
-                            </fieldset>
-                            <div>
-                              <p style="padding-top: 50px; font-size: 1.2em;">You can also preview our marketplace <a
-                                  href="https://dhali-app.web.app/#/">here</a>!</p>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </form>
               </div>
             </div>
           </div>
