Link to docs from landing page

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     </div>
                     <div class="col-lg-6 negative-margin col-padding">
                       <div class="border-first-button scroll-to-section">
-                        <a href="https://dhali-app.web.app">Try the marketplace</a>
+                        <a href="docs">Discover more</a>
                       </div>
                     </div>
                   </div>
