migrate to substack

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <ul class="nav">
               <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
               <li class="scroll-to-section"><a href="docs">Docs</a></li>
-              <li class="scroll-to-section"><a href="blog">Blog</a></li>
+              <li class="scroll-to-section"><a href="https://dhali.substack.com/">Blog</a></li>
               <li class="scroll-to-section"><a href="https://dhali-app.web.app/#/">
                   <span style="position: relative;">
                     <sup
